[gd_scene load_steps=8 format=3 uid="uid://bdmjb6tiweuoi"]

[ext_resource type="Script" uid="uid://dk724jhfoerx6" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/quick_insertion_menu_option_item.gd" id="1_5tibl"]
[ext_resource type="Script" uid="uid://mgen7tsl7pq7" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/id_label.gd" id="2_sicfo"]
[ext_resource type="Script" uid="uid://dxpucewfowyk" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/inputs.gd" id="3_v4e1k"]
[ext_resource type="Script" uid="uid://c7yc2akhtyu7q" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/string_input.gd" id="4_xlrtn"]
[ext_resource type="Script" uid="uid://duc1nomhvyr72" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/number_input.gd" id="5_d085t"]
[ext_resource type="Script" uid="uid://c5c25jc858c1x" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/options_input.gd" id="6_rqidv"]
[ext_resource type="Script" uid="uid://bce7xky14e55r" path="res://ui/scripts/pages/editor/quick_insertion_menu_option_item/color_input.gd" id="7_dnxbk"]

[node name="QuickInsertionMenuOptionItem" type="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
script = ExtResource("1_5tibl")

[node name="IDLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("2_sicfo")

[node name="Inputs" type="Control" parent="."]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_v4e1k")

[node name="StringInput" type="LineEdit" parent="Inputs"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_xlrtn")

[node name="NumberInput" type="SpinBox" parent="Inputs"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_d085t")

[node name="OptionsInput" type="OptionButton" parent="Inputs"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_rqidv")

[node name="ColorInput" type="ColorPickerButton" parent="Inputs"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("7_dnxbk")
